--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,6 @@
 [unstable]
 build-std = ["core", "compiler_builtins"]
-#build-std-features = ["compiler-builtins-mem"]
+build-std-features = ["compiler-builtins-mem"]
 
 [build]
 target = "/home/knoldus/programming/os-in-rust/x86_64-os-in-rust.json"
