--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bootloader = "0.9.8"
+bootloader = "0.9.16"
 volatile = "0.2.6"
 spin = "0.5.2"
 
@@ -18,9 +18,9 @@ features = ["spin_no_std"]
 # the profile used for `cargo build`
 [profile.dev]
 # disable stack unwinding on panic
-panic = "abort"
+#panic = "abort"
 
 # the profile used for `cargo build --release`
 [profile.release]
 # disable stack unwinding on panic
-panic = "abort"
+#panic = "abort"
